Fait: Validation du mot de passe ainsi que de l'email.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,29 +11,29 @@
         android:layout_width="223dp"
         android:layout_height="54dp"
         android:layout_marginStart="101dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="87dp"
         android:layout_marginBottom="12dp"
         android:ems="10"
-        android:hint="Votre mot de passe"
+        android:hint="@string/your_password"
         android:inputType="textPassword"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/showPasswordCheckBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
         tools:visibility="visible" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/emailEditText"
         android:layout_width="218dp"
         android:layout_height="53dp"
         android:layout_marginStart="102dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="99dp"
         android:layout_marginBottom="17dp"
         android:ems="10"
-        android:hint="Votre courriel"
+        android:hint="@string/your_email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,10 +45,10 @@
         android:layout_width="219dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="24dp"
-        android:text="Afficher votre mot de passe"
+        android:text="@string/show_your_password"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -61,25 +61,27 @@
         android:layout_width="215dp"
         android:layout_height="48dp"
         android:layout_marginStart="103dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="71dp"
-        android:text="VALIDER MOT DE PASSE"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        android:onClick="validatePassword"
+        android:text="@string/validate_password"
+        app:layout_constraintBottom_toTopOf="@+id/validateMessage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showPasswordCheckBox" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/validateMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="189dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="189dp"
         android:layout_marginBottom="66dp"
-        android:text="TEST"
+        android:text="..."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
